spade-tests/src/snapshots/spade_tests__typeinference__trait_is_not_satisfied_now.snap
---
source: spade-tests/src/typeinference.rs
---
trait Trait {}

impl Trait for uint<8> {}

fn needs_trait<T: Trait>(x: T) {}

fn test() {
    let x: uint<9> = 0;

    needs_trait(x)
}


error: Trait bound not satisfied. uint<9> does not implement Trait
   ┌─ testinput:10:17
   │
 5 │ fn needs_trait<T: Trait>(x: T) {}
   │                   ----- Required because of the trait bound specified here
   ·
10 │     needs_trait(x)
   │                 ^ uint<9> does not implement Trait
